v10/docs/KeyfactorCommonSchedulingModelsWeeklyModel.md
# KeyfactorCommonSchedulingModelsWeeklyModel

## Properties

Name | Type | Description | Notes
------------ | ------------- | ------------- | -------------
**Days** | Pointer to **[]int64** |  | [optional] 
**Time** | Pointer to **time.Time** |  | [optional] 

## Methods

### NewKeyfactorCommonSchedulingModelsWeeklyModel

`func NewKeyfactorCommonSchedulingModelsWeeklyModel() *KeyfactorCommonSchedulingModelsWeeklyModel`

NewKeyfactorCommonSchedulingModelsWeeklyModel instantiates a new KeyfactorCommonSchedulingModelsWeeklyModel object
This constructor will assign default values to properties that have it defined,
and makes sure properties required by API are set, but the set of arguments
will change when the set of required properties is changed

### NewKeyfactorCommonSchedulingModelsWeeklyModelWithDefaults

`func NewKeyfactorCommonSchedulingModelsWeeklyModelWithDefaults() *KeyfactorCommonSchedulingModelsWeeklyModel`

NewKeyfactorCommonSchedulingModelsWeeklyModelWithDefaults instantiates a new KeyfactorCommonSchedulingModelsWeeklyModel object
This constructor will only assign default values to properties that have it defined,
but it doesn't guarantee that properties required by API are set

### GetDays

`func (o *KeyfactorCommonSchedulingModelsWeeklyModel) GetDays() []int64`

GetDays returns the Days field if non-nil, zero value otherwise.

### GetDaysOk

`func (o *KeyfactorCommonSchedulingModelsWeeklyModel) GetDaysOk() (*[]int64, bool)`

GetDaysOk returns a tuple with the Days field if it's non-nil, zero value otherwise
and a boolean to check if the value has been set.

### SetDays

`func (o *KeyfactorCommonSchedulingModelsWeeklyModel) SetDays(v []int64)`

SetDays sets Days field to given value.

### HasDays

`func (o *KeyfactorCommonSchedulingModelsWeeklyModel) HasDays() bool`

HasDays returns a boolean if a field has been set.

### GetTime

`func (o *KeyfactorCommonSchedulingModelsWeeklyModel) GetTime() time.Time`

GetTime returns the Time field if non-nil, zero value otherwise.

### GetTimeOk

`func (o *KeyfactorCommonSchedulingModelsWeeklyModel) GetTimeOk() (*time.Time, bool)`

GetTimeOk returns a tuple with the Time field if it's non-nil, zero value otherwise
and a boolean to check if the value has been set.

### SetTime

`func (o *KeyfactorCommonSchedulingModelsWeeklyModel) SetTime(v time.Time)`

SetTime sets Time field to given value.

### HasTime

`func (o *KeyfactorCommonSchedulingModelsWeeklyModel) HasTime() bool`

HasTime returns a boolean if a field has been set.


[[Back to Model list]](../README.md#documentation-for-models) [[Back to API list]](../README.md#documentation-for-api-endpoints) [[Back to README]](../README.md)


